[gd_scene load_steps=4 format=2]

[ext_resource path="res://art/characters/Enemys/Can't move/MiniShooter.png" type="Texture" id=1]
[ext_resource path="res://scenes/characters/ennemys/Not moving/MiniShooter/MiniShooterDown.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 19.6447, 94.9196 )

[node name="MiniShooterDown" type="Node2D"]
position = Vector2( -0.0831566, 0 )
script = ExtResource( 2 )

[node name="Body" type="Node2D" parent="."]

[node name="MiniDaggerSpawner" type="Position2D" parent="Body"]
position = Vector2( 0, 3.54465 )

[node name="Sprite" type="Sprite" parent="Body"]
texture = ExtResource( 1 )

[node name="Scanner" type="Area2D" parent="Body"]
collision_layer = 0
collision_mask = 1024

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/Scanner"]
position = Vector2( 0, 99.4623 )
shape = SubResource( 1 )

[node name="MiniDaggerTimer" type="Timer" parent="."]
one_shot = true
[connection signal="body_entered" from="Body/Scanner" to="." method="_on_Scanner_body_entered"]
[connection signal="body_exited" from="Body/Scanner" to="." method="_on_Scanner_body_exited"]
[connection signal="timeout" from="MiniDaggerTimer" to="." method="_on_MiniDaggerTimer_timeout"]
